feat: 移除 chalk 依赖，改用自定义的 color 实现

--- a/ws-proxy-server/client-assets/index.html
+++ b/ws-proxy-server/client-assets/index.html
@@ -13,6 +13,7 @@
     <div id="showTip" class="tip text-center hide">tip</div>
 
     <h1 class="header text-center">WEBSOCKET MOCK MSG SEND</h1>
+    <div class="text-center">用于手动发送 MOCK 数据至 websocket 连接的客户端，以实现即时的消息推送调试能力支持</div>
     <div class="ws-size text-center">当前活动的 ws 代理连接数为 <span id="wsSize">0</span></div>
     <div class="msg-container">
         <textarea id="msgEdit" rows="25" placeholder="请输入要模拟发送的信息"></textarea>
